Turned background into white.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #4f9431;
+      background-color: white;
       font-family: Helvetica, Arial, FreeSans, san-serif;
       color: #ffffff;
     }
@@ -54,9 +54,12 @@
 <h2>License</h2>
 <p>GPL</p>
 <h2>Authors</h2>
-<p>(to be added)<br/><br/>      </p>
+<p>(to be added)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p>Pawel Szczesny (ps@pawelszczesny.org)<br/>      </p>
+<p>Pawel Szczesny (ps@pawelszczesny.org)
+<br/>      </p>
 
 
     <h2>Download</h2>
