Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin-top: 1.0em;
       background-color: white;
       font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #ffffff;
+      color: black;
     }
     #container {
       margin: 0 auto;
